--- a/assets/css/_variables.scss
+++ b/assets/css/_variables.scss
@@ -1,3 +1,6 @@
 $breakpoint-mobile: 320px;
 $breakpoint-tablet: 758px;
 $breakpoint-desktop: 1024px;
+
+$main-color: #4ba0fa;
+$main-color1: #ffffff;
