--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -332,14 +332,34 @@
       }
       h2 {
         margin: 10px 0 15px 0;
-        font-size: 1.5rem;
+        font-size: 2rem;
         color: $main-color;
         font-weight: 900;
       }
       p {
+        font-size: 1.1rem;
+        letter-spacing: 0.1rem;
         margin: 5px 0;
-        line-height: 1.1;
+        line-height: 1.3;
         color: #5e5e5e;
+      }
+      .cont01-ul-cont {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        li {
+          padding: 5px 0;
+          min-height: 80px;
+          height: 20%;
+          i {
+            font-size: 1.3rem;
+            color: #7674ff;
+          }
+          p {
+            font-size: 1.1rem;
+            color: #5e5e5e;
+          }
+        }
       }
     }
   }
@@ -587,13 +607,13 @@
   .footer-bottom {
     width: 90%;
     text-align: center;
-    margin: 30px auto;
+    margin: 20px auto;
     p {
       width: 100%;
       word-break: keep-all;
     }
     .copy {
-      margin: 15px 0;
+      margin: 10px 0;
       padding: 10px 0;
       word-break: keep-all;
     }
