--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,6 +1,7 @@
 @import "./reset";
 @import "./mixin";
 @import "./variables";
+@import "./tokenChart";
 
 // 레이아웃 디자인
 .btn-none-block {
@@ -115,6 +116,7 @@
   width: 100%;
   height: 80px;
   position: fixed;
+  top: 0;
   left: 50%;
   transform: translate(-50%, 0);
   display: flex;
@@ -296,7 +298,7 @@
     text-align: center;
     margin: 30px auto;
     h1 {
-      font-size: 3.5rem;
+      font-size: 2.5rem;
       color: $main-color;
       margin: 0 0 15px 0;
     }
@@ -418,6 +420,7 @@
         max-height: 50px;
         margin: 30px 0;
         border-radius: 50px;
+        padding: 10px 0;
         border: none;
         outline: none;
         cursor: pointer;
@@ -502,20 +505,21 @@
   justify-content: space-between;
   margin: 0 auto;
   .cont03 {
-    flex-basis: 30%;
+    flex-basis: 23%;
     padding: 20px;
     background-color: $main-color1;
     border-radius: 13px;
     box-shadow: 3px 7px 24px -3px rgba(0, 0, 0, 0.15);
     h2 {
-      font-size: 1.5rem;
+      font-size: 1.2rem;
       margin: 0 0 15px 0;
       color: $main-color;
+      line-height: 1.1;
     }
     p {
       line-height: 1.1;
     }
-    &:nth-child(2) {
+    &:hover {
       background: linear-gradient(75deg, #736efe, #736efe, #5efce8);
       h2 {
         color: $main-color1;
@@ -536,34 +540,13 @@
   flex-wrap: wrap;
   justify-content: space-between;
   margin: 0 auto;
-  .cont04-right,
-  .cont04-left {
-    flex-basis: 45%;
-    height: 100%;
+  .cont04 {
+    flex-basis: 100%;
   }
-
-  .cont04-left {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-    .cont04 {
-      padding: 20px;
-      background-color: $main-color1;
-      border-radius: 13px;
-      box-shadow: 3px 7px 24px -3px rgba(0, 0, 0, 0.15);
-      margin: 20px 0;
-      h2 {
-        font-size: 1.5rem;
-        margin: 0 0 15px 0;
-        color: $main-color;
-      }
-    }
-  }
-  .cont04-right {
+  .cont04 {
     text-align: center;
     img {
-      max-width: 550px;
+      max-width: 750px;
       width: 100%;
       animation: top-transition 2s infinite ease-in-out alternate;
     }
@@ -645,6 +628,11 @@
 //mediaquery
 
 @include mobile {
+  .hero {
+    .hero-cont {
+      margin-top: 80px;
+    }
+  }
   .cont-container {
     margin: 50px 0;
   }
@@ -682,7 +670,7 @@
       text-align: center;
       .ap-cont-title {
         h1 {
-          font-size: 3.5rem;
+          font-size: 2.7rem;
         }
       }
     }
@@ -711,11 +699,6 @@
     margin: 10px 0;
   }
 
-  .cont04-right,
-  .cont04-left {
-    flex-basis: 100% !important;
-    height: 100%;
-  }
   .pc {
     display: none !important;
   }
@@ -771,12 +754,6 @@
   .cont03 {
     flex-basis: 100% !important;
     margin: 10px 0;
-  }
-
-  .cont04-right,
-  .cont04-left {
-    flex-basis: 100% !important;
-    height: 100%;
   }
 }
 
